--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "concurrently --kill-others-on-fail -n \"Angular,Proxy\" -c \"cyan,yellow\" \"ng serve\" \"node proxy-server.js\"",
     "proxy": "node proxy-server.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
@@ -30,21 +30,20 @@
     "@angular/forms": "^21.0.0",
     "@angular/platform-browser": "^21.0.0",
     "@angular/router": "^21.0.0",
-    "@videojs/http-streaming": "^3.17.2",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "hls.js": "^1.6.15",
     "node-fetch": "^2.7.0",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "video.js": "^8.23.4"
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@angular/build": "^21.0.2",
     "@angular/cli": "^21.0.2",
     "@angular/compiler-cli": "^21.0.0",
     "@tailwindcss/postcss": "^4.1.12",
+    "concurrently": "^9.2.1",
     "jsdom": "^27.1.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.12",
